# bidcompass

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BLOG_DOCKER_FRONTEND_TROUBLESHOOT.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pdf_to_markdown.py  pyproject.toml  test_api.py
config/: settings.py  urls.py
docs/: MVP_STRATEGY_PLAN.md  Metacognitive Self-modification.md  SUCVIEW[2026-03-06].xls  architecture-simple.mmd  architecture.md  portfolio-materials.md  나의방_낙찰2026-02- 2025.xlsx  나의방_낙찰2026-02-05_1.xlsx  나의방_입찰2026-03-05_1.xlsx  인포나의투찰성향목록.xlsx  인포투찰성향_2021_633건.xlsx  인포투찰성향_2022_709건.xlsx  인포투찰성향_2023_664건.xlsx  인포투찰성향_2024_571건.xlsx  인포투찰성향_2025_379건.xlsx  인포투찰성향_2026_27건.xlsx  조달청_OpenAPI참고자료_나라장터_공공데이터개방표준서비스_1.1 (1).md  조달청_OpenAPI참고자료_나라장터_낙찰정보서비스_1.1.md  조달청_적격심사세부기준.md
docs/인포투찰성향_원본/: 인포투찰성향_20210105_20210305_52건.xlsx  인포투찰성향_20210310_20210405_34건.xlsx  인포투찰성향_20210406_20210614_100건.xlsx  인포투찰성향_20210614_20210720_100건.xlsx  인포투찰성향_20210720_20211005_100건.xlsx  인포투찰성향_20211006_20211129_100건.xlsx  인포투찰성향_20211129_20211217_100건.xlsx  인포투찰성향_20211217_20220302_100건.xlsx  인포투찰성향_20220308_20220310_7건.xlsx  인포투찰성향_20220311_20220517_100건.xlsx  인포투찰성향_20220517_20220629_100건.xlsx  인포투찰성향_20220630_20220905_100건.xlsx  (+21 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
g2b/: admin.py  apps.py  models.py  tests.py  ui_api.py  urls.py  views.py
scripts/: run_all_pipelines.sh  run_collect_api_data.sh  run_daily_construction_sync.sh  run_fetch_announcements.sh  run_fetch_results.sh  test_new_apis.py
(+84 files in other folders)
