[project]
name = "bidcompass"
version = "0.1.0"
description = "AI-powered bidding analysis for Korea G2B public procurement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.1",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "xmltodict>=0.13",
    "openpyxl>=3.1",
]

[tool.setuptools]
py-modules = []
packages = ["config", "g2b"]
